devops/jenkins/jenkins-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins
  namespace: jenkins-ns
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jenkins.shixiaochuang.org`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: jenkins
          port: 8080
